--- a/facilities.html
+++ b/facilities.html
@@ -1,7 +1,16 @@
 <html>
 <head>
+<meta charset="UTF-8">
 </head>
 <body>
+<header>
+<table>
+  <tr>
+<th><a href="/findex.html">Startseite</a></th> <th><a href="/contact.html">Kontakt</a></th>
+  </tr>
+</table>
+<h1> Villa Carpe Diem</h1>
+</header>
 <h2>Ausstattung</h2>
 <ul>
   <li>Whirlpool</li>
