--- a/index.html
+++ b/index.html
@@ -1,11 +1,33 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <script src="script.js"></script>
+    <style>
+    table {
+      font-family: arial, sans-serif;
+      border-collapse: collapse;
+      width: 30%;
+    }
+    
+    td, th {
+      border: 1px solid #dddddd;
+      text-align: left;
+      padding: 8px;
+    }
+    
+    tr:nth-child(even) {
+      background-color: #dddddd;
+    }
+    </style>
+    <!--<script src="script.js"></script>-->
     <!-- <link rel="stylesheet" type="text/css" href="styles.css"> -->
   </head>
   <body>
     <header>
+      <table>
+        <tr>
+    <th><a href="/facilities.html">Ausstattung</a></th> <th><a href="/contact.html">Kontakt</a></th>
+        </tr>
+      </table>
       <h1> Villa Carpe Diem</h1>
     </header>
     <main>
@@ -13,14 +35,6 @@
       Ausgedachtern! Regen gibt es hier nicht, also machen Sie sich bereit für Sonne pur, lange
       Strandspaziergänge und Sprünge vom hauseigenen Steg in den immer warmen See Existiert-Nicht.</p>
       <h2>Ausstattung</h2>
-      <ul>
-        <li>Whirlpool</li>
-        <li>Pool</li>
-        <li>Sauna</li>
-        <li>Kinosaal</li>
-        <li>Persönlicher Koch</li>
-        <li>Persönlicher Wellnessbereich</li>
-      </ul>
 
     </main>
     <footer>
