--- a/facilities.html
+++ b/facilities.html
@@ -23,7 +23,7 @@ tr:nth-child(even) {
 <header>
 <table>
   <tr>
-<th><a href="/findex.html">Startseite</a></th> <th><a href="/contact.html">Kontakt</a></th>
+<!--<th><a href="/findex.html">Startseite</a></th> <th><a href="/contact.html">Kontakt</a></th>-->
   </tr>
 </table>
 <h1> Villa Carpe Diem</h1>
