--- a/contact.html
+++ b/contact.html
@@ -23,10 +23,18 @@
 <header>
 <table>
   <tr>
-<th><a href="/facilities.html">Ausstattung</a></th> <th><a href="/contact.html">Kontakt</a></th>
+  <th><a href="/index.html">Startseite</a></th><th><a href="/facilities.html">Ausstattung</a></th>
   </tr>
 </table>
-<h1> Villa Carpe Diem</h1>
+
 </header>
+<footer>
+<address>
+0000/00000000<br>
+villa-carpe-diem@gnone.com<br>
+Am Existiert-Nicht See 000<br>
+00000 Ausgedachtern<br>
+</address>
+</footer>
 </body>
 </html>
