--- a/index.html
+++ b/index.html
@@ -34,8 +34,11 @@
       <p>Willkommen in unsere wunderschöne Ferien-Villa im wunderschönen Ort
       Ausgedachtern! Regen gibt es hier nicht, also machen Sie sich bereit für Sonne pur, lange
       Strandspaziergänge und Sprünge vom hauseigenen Steg in den immer warmen See Existiert-Nicht.</p>
-     
-
     </main>
+    <footer>
+      <table>
+        <tr><h5>0000/00000000 villa-carpe-diem@gnone.com Am Existiert-Nicht See 000 00000 Ausgedachtern</h5></tr>
+    </table>
+    </footer>
   </body>
 </html>
