--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
       <p>Willkommen in unsere wunderschöne Ferien-Villa im wunderschönen Ort
       Ausgedachtern! Regen gibt es hier nicht, also machen Sie sich bereit für Sonne pur, lange
       Strandspaziergänge und Sprünge vom hauseigenen Steg in den immer warmen See Existiert-Nicht.</p>
+
+      <img src="https://cdn.burobork.nl/8a9f5721-93b5-43d7-81f8-c6a2c26743b1" alt="Villa Carpe Diem" width="500">
+      <p><h4>Villa Carpe Diem</h4></p>
     </main>
     <footer>
       <table>
