--- a/contact.html
+++ b/contact.html
@@ -26,15 +26,30 @@
   <th><a href="/index.html">Startseite</a></th><th><a href="/facilities.html">Ausstattung</a></th>
   </tr>
 </table>
-
 </header>
+<main>
+  <h1>Kontaktformular</h1>
+  <form action="/action_page.php">
+    <label for="fname">Vorname:</label>
+    <input type="text" id="fname" name="fname"><br><br>
+    <label for="lname">Nachname:</label>
+    <input type="text" id="lname" name="lname"><br><br>
+    <label for="email">Email:</label>
+    <input type="text" id="email" name="Email"><br><br>
+    <input type="submit" value="Absenden">
+  </form>
+  
+  <p>Klicken Sie auf "Absenden" und ihre Daten werden an uns weitergeleitet.</p>
+
+</main>
 <footer>
-  <h1>Kontaktinformationen</h1>
+  <h1>Kontakt</h1>
 <address>
-0000/00000000<br>
-villa-carpe-diem@gnone.com<br>
-Am Existiert-Nicht See 000<br>
-00000 Ausgedachtern<br>
+<p> Telefonnummer: 0000/00000000<br></p>
+<p>Email: villa-carpe-diem@gnone.com<br></p>
+<p>Adresse: 
+<br> Existiert-Nicht See 000<br>
+00000 Ausgedachtern<br></p>
 </address>
 </footer>
 </body>
